--- a/View/src/main/resources/viewBundle_en_US.properties
+++ b/View/src/main/resources/viewBundle_en_US.properties
@@ -9,3 +9,5 @@ saveButton=Save
 readButton=Load
 english=English
 polish=Polish
+viewException=A problem has occurred in view layer
+cause=\nCaused by
