--- a/Model/src/main/resources/bundle_en_US.properties
+++ b/Model/src/main/resources/bundle_en_US.properties
@@ -1,6 +1,8 @@
 FailedFileOperation=File operation failed.
 IllegalBoardValue=Wrong value was passed to the field.
 NotEnoughElements=Not enough elements in list.
+DatabaseFail=Database operation failed.
+OutOfDatabase=Index is not in the database.
 cause=\nCaused by
 closed=closed
 max-min=Max must not be smaller than min!
