--- a/Model/src/main/resources/bundle_en_US.properties
+++ b/Model/src/main/resources/bundle_en_US.properties
@@ -3,6 +3,7 @@ IllegalBoardValue=Wrong value was passed to the field.
 NotEnoughElements=Not enough elements in list.
 DatabaseFail=Database operation failed.
 OutOfDatabase=Index is not in the database.
+NotInitialized=Database was not initialized.
 EmptyRecord=Empty database record.
 cause=\nCaused by
 closed=closed
